[Fix]: Centralise all z-index declarations

--- a/assets/css/main/_zindex.scss
+++ b/assets/css/main/_zindex.scss
@@ -3,14 +3,22 @@ Z-Index of items
 Helps us keep in view who is in front and how far
 */
 
-.nav {
-    z-index: 998;
-}
-
 .cookie-consent {
     z-index: 10001;
 }
 
+.line {
+    z-index: 10000;
+}
+
+.nav {
+    z-index: 998;
+}
+
 .header__wrapper {
     z-index: 998;
+}
+
+.info {
+    z-index: 100;
 }
