--- a/pages/dienstleistungen.scss
+++ b/pages/dienstleistungen.scss
@@ -52,7 +52,6 @@
   position: absolute;
   bottom: 30px;
   left: 30px;
-  z-index: 100;
   color: white;
   padding: 40px;
   max-width: 480px;
